@@ -1,3 +1,5 @@
+24 oct (la)
+      - add score.close() to plugin framework
 19.oct (la)
       - fix #13183: [MusicXML] Wrong import of right barline
       - add dynamic and note velocity support in MusicXML export/import
